2013-10-01  Timothy Hatcher  <timothy@apple.com>

        Fix singular labels for test failures.

        https://bugs.webkit.org/show_bug.cgi?id=122200

        Reviewed by Joseph Pecoraro.

        * BuildSlaveSupport/build.webkit.org-config/public_html/dashboard/Scripts/BuildbotTesterQueueView.js:
        (BuildbotTesterQueueView.prototype.update.appendBuilderQueueStatus):

2013-10-01  Timothy Hatcher  <timothy@apple.com>

        Don't keep appending iterations each time the queue updates.

        https://bugs.webkit.org/show_bug.cgi?id=122198

        Reviewed by Joseph Pecoraro.

        * BuildSlaveSupport/build.webkit.org-config/public_html/dashboard/Scripts/BuildbotQueue.js:
        (BuildbotQueue.prototype.update):

2013-10-01  Timothy Hatcher  <timothy@apple.com>

        Properly sort iterations in the Dashboard by revision for out-of-order queues.

        https://bugs.webkit.org/show_bug.cgi?id=122196

        Reviewed by Brent Fulgham.

        * BuildSlaveSupport/build.webkit.org-config/public_html/dashboard/Scripts/BuildbotIteration.js:
        (BuildbotIteration):
        (BuildbotIteration.prototype.update):
        * BuildSlaveSupport/build.webkit.org-config/public_html/dashboard/Scripts/BuildbotQueue.js:
        (BuildbotQueue.prototype.update):
        (BuildbotQueue.prototype.sortIterations):

2013-10-01  Timothy Hatcher  <timothy@apple.com>

        Fix some exceptions seen in the Buildbot Dashboard when looking at unloaded iterations.

        Also fix some URLs to not have extras slashes and add a page title.

        https://bugs.webkit.org/show_bug.cgi?id=122192

        Reviewed by Joseph Pecoraro.

        * BuildSlaveSupport/build.webkit.org-config/public_html/dashboard/Scripts/BuildbotTesterQueueView.js:
        (BuildbotTesterQueueView.prototype.update.appendBuilderQueueStatus):
        * BuildSlaveSupport/build.webkit.org-config/public_html/dashboard/Scripts/WebKitBuildbot.js: